refactor: enhance Currency and ExchangeRate repositories with @NonNull annotations and improve CurrencyService logic