@@ -3,6 +3,10 @@ package com.example.exchangeportal.service;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
+import java.io.IOException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.time.LocalDate;
 import java.util.Arrays;
 import java.util.List;
@@ -14,13 +18,19 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import com.example.exchangeportal.record.CurrencyClientResponse;
 import com.example.exchangeportal.dto.CurrencyDto;
 import com.example.exchangeportal.dto.ExchangeRateDto;
 import com.example.exchangeportal.entity.Currency;
-import com.example.exchangeportal.exception.ApiException;
-import com.example.exchangeportal.exception.ParsingException;
-import com.example.exchangeportal.provider.CurrencyProvider;
+import com.example.exchangeportal.entity.ExchangeRate;
+import com.example.exchangeportal.parser.CurrencyXmlParser;
+import com.example.exchangeportal.parser.ExchangeRateXmlParser;
+import com.example.exchangeportal.record.ParsedCurrency;
 import com.example.exchangeportal.repository.CurrencyRepository;
+import com.example.exchangeportal.repository.ExchangeRateRepository;
+import com.example.exchangeportal.transformer.CurrencyTransformer;
+import com.example.exchangeportal.transformer.ExchangeRateTransformer;
+import com.example.exchangeportal.util.DateUtils;
 import org.modelmapper.ModelMapper;
 
 @SpringBootTest
@@ -30,10 +40,28 @@ public class CurrencyServiceTest {
     private CurrencyRepository mockCurrencyRepository;
 
     @MockBean
-    private CurrencyProvider mockCurrencyProvider;
+    private HttpClient mockHttpClient;
 
     @MockBean
-    private ExchangeRateService mockExchangeRateService;
+    private HttpResponse<String> mockHttpResponse;
+
+    @MockBean
+    private CurrencyXmlParser mockCurrencyXmlParser;
+
+    @MockBean
+    private CurrencyTransformer mockCurrencyTransformer;
+
+    @MockBean
+    private ExchangeRateRepository mockExchangeRateRepository;
+
+    @MockBean
+    private ExchangeRateXmlParser mockExchangeRateXmlParser;
+
+    @MockBean
+    private ExchangeRateTransformer mockExchangeRateTransformer;
+
+    @MockBean
+    private DateUtils mockDateUtils;
 
     @MockBean
     private ModelMapper mockModelMapper;
@@ -43,11 +71,15 @@ public class CurrencyServiceTest {
 
     @BeforeEach
     void setUp() {
-        Mockito.reset(mockCurrencyRepository, mockCurrencyProvider);
+        Mockito.reset(mockCurrencyRepository, mockHttpClient, mockHttpResponse, mockCurrencyXmlParser, mockCurrencyTransformer);
     }
 
+    @SuppressWarnings("unchecked")
     @Test
-    void fetchAndSaveCurrenciesFromApi_Success() throws ApiException, ParsingException {
+    void populate_Success() throws Exception {
+        String xmlData = "<xml>mock</xml>";
+        List<ParsedCurrency> parsedCurrencies = List.of(
+                new ParsedCurrency("USD", "US Dollar", 2));
         List<Currency> currencies = Arrays.asList(Currency.builder()
                 .id(1L)
                 .code("USD")
@@ -55,16 +87,23 @@ public class CurrencyServiceTest {
                 .minorUnits(2)
                 .build());
 
-        when(mockCurrencyProvider.fetchAll()).thenReturn(currencies);
+        when(mockHttpClient.send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class)))
+                .thenReturn(mockHttpResponse);
+        when(mockHttpResponse.statusCode()).thenReturn(200);
+        when(mockHttpResponse.body()).thenReturn(xmlData);
+        when(mockCurrencyXmlParser.parse(new CurrencyClientResponse(xmlData))).thenReturn(parsedCurrencies);
+        when(mockCurrencyTransformer.toCurrencies(parsedCurrencies)).thenReturn(currencies);
 
-        currencyService.fetchAndSaveCurrenciesFromApi();
+        currencyService.populate();
 
-        verify(mockCurrencyProvider).fetchAll();
+        verify(mockHttpClient).send(any(HttpRequest.class), any(HttpResponse.BodyHandler.class));
+        verify(mockCurrencyXmlParser).parse(new CurrencyClientResponse(xmlData));
+        verify(mockCurrencyTransformer).toCurrencies(parsedCurrencies);
         verify(mockCurrencyRepository).saveAll(currencies);
     }
 
     @Test
-    public void testGetCurrencyWithExchangeRates_Success() throws Exception {
+    public void testGet_Success() throws Exception {
         Currency expectedCurrency = Currency.builder()
                 .id(1L)
                 .code("USD")
@@ -75,32 +114,28 @@ public class CurrencyServiceTest {
         LocalDate fromDate = LocalDate.of(2024, 5, 1);
         LocalDate toDate = LocalDate.of(2024, 5, 5);
 
+        List<ExchangeRate> exchangeRates = Arrays.asList(
+                ExchangeRate.builder().currency(expectedCurrency).rate(1.23).date(fromDate).build(),
+                ExchangeRate.builder().currency(expectedCurrency).rate(1.24).date(LocalDate.of(2024, 5, 2)).build());
+
         when(mockCurrencyRepository.findById(1L)).thenReturn(Optional.of(expectedCurrency));
-
-        List<ExchangeRateDto> exchangeRatesDtos = Arrays.asList(
-                ExchangeRateDto.builder().rate(1.23).date(fromDate).build(),
-                ExchangeRateDto.builder().rate(1.24).date(LocalDate.of(2024, 5, 2)).build(),
-                ExchangeRateDto.builder().rate(1.25).date(LocalDate.of(2024, 5, 3)).build(),
-                ExchangeRateDto.builder().rate(1.14).date(LocalDate.of(2024, 5, 4)).build(),
-                ExchangeRateDto.builder().rate(1.23).date(toDate).build());
-
-        when(mockExchangeRateService.getAndPopulateMissingExchangeRatesForCurrency(
-                expectedCurrency,
-                fromDate,
-                toDate)).thenReturn(exchangeRatesDtos);
+        when(mockExchangeRateRepository.findAll(expectedCurrency, fromDate, toDate)).thenReturn(exchangeRates);
+        when(mockDateUtils.findMissingDates(exchangeRates, fromDate, toDate)).thenReturn(List.of());
 
         CurrencyDto expectedCurrencyDto = CurrencyDto.builder()
                 .id(1L).code("USD").name("US Dollar").build();
-
         when(mockModelMapper.map(expectedCurrency, CurrencyDto.class)).thenReturn(expectedCurrencyDto);
 
-        CurrencyDto actualCurrencyDto = currencyService.getCurrencyWithExchangeRates(
-                1L,
-                fromDate,
-                toDate);
+        ExchangeRateDto rateDto1 = ExchangeRateDto.builder().rate(1.24).date(LocalDate.of(2024, 5, 2)).build();
+        ExchangeRateDto rateDto2 = ExchangeRateDto.builder().rate(1.23).date(fromDate).build();
+        when(mockModelMapper.map(exchangeRates.get(0), ExchangeRateDto.class)).thenReturn(rateDto2);
+        when(mockModelMapper.map(exchangeRates.get(1), ExchangeRateDto.class)).thenReturn(rateDto1);
 
-        expectedCurrencyDto.setExchangeRates(exchangeRatesDtos);
+        CurrencyDto actualCurrencyDto = currencyService.get(1L, fromDate, toDate);
 
+        expectedCurrencyDto.setExchangeRates(List.of(rateDto1, rateDto2));
         assertEquals(expectedCurrencyDto, actualCurrencyDto);
+
+        verify(mockExchangeRateRepository).findAll(expectedCurrency, fromDate, toDate);
     }
 }
